--- a/style.css
+++ b/style.css
@@ -204,6 +204,10 @@ body {
     margin: 5% 0;
 }
 
+.submit a{
+    text-decoration: none;
+}
+
 .Submit-btn {
     width: 80%;
     padding: 10px 5%;
